...
                  fontSize: 14,
                  fontWeight: FontWeight.normal,
                ),
                tabs: const [
                  Tab(
                    icon: Icon(Icons.home_outlined, size: 24),
                    text: 'Home',
                  ),
                  Tab(
                    icon: Icon(Icons.explore_outlined, size: 24),
                    text: 'Explore',
                  ),
                  Tab(
                    icon: Icon(Icons.message_outlined, size: 24),
                    text: 'Messages',
                  ),
                  Tab(
                    icon: Icon(Icons.person_outline, size: 24),
                    text: 'Profile',
                  ),
                ],
...
